// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kbnLoadingIndicator is hidden by default 1`] = `
<div
  className="loadingIndicator hidden"
  data-test-subj="globalLoadingIndicator-hidden"
>
  <div
    className="loadingIndicator__bar"
  />
</div>
`;

exports[`kbnLoadingIndicator is visible when loadingCount is > 0 1`] = `
<div
  className="loadingIndicator"
  data-test-subj="globalLoadingIndicator"
>
  <div
    className="loadingIndicator__bar"
  />
</div>
`;
